--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,26 @@ version: '3.3'
 services:
   nginx:
     image: nginx:latest
-    restart: always
-    env_file:
-      - .env
+    restart: always    
     ports:
-      - ${PORT}:80
+      - 8081:80
     volumes:
-      - .:/app
+      - ./www/:/app
       - ./.docker/nginx/conf/default.conf:/etc/nginx/conf.d/default.conf
+    links:
+      - php7  
+
   php7:
     build: ./.docker/php7
-    restart: always
-    env_file:
-      - .env
+    restart: always   
     volumes:
-      - ~/.composer:/root/.composer
-      - .:/app
+      - ./www:/app
     depends_on:
       - db
     links:
       - db
     environment:
-       XDEBUG_CONFIG: "remote_host=172.21.0.1 remote_enable=1"
+       XDEBUG_CONFIG: "remote_host=172.17.0.1 remote_enable=1"
   db:
     image: mariadb
     ports:
@@ -31,9 +29,7 @@ services:
     volumes:
       -  ./.docker/mysql/conf:/etc/mysql/conf.d
       - ./.docker/volumes/mysql/dump:/docker-entrypoint-initdb.d
-      - ./.docker/volumes/mysql/data:/var/lib/mysql
-    env_file:
-      - .env
+      - ./.docker/volumes/mysql/data:/var/lib/mysql   
     environment:
-      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-      - MYSQL_DATABASE=${DB_DATABASE}
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=dashboard
